--- a/_config.yml
+++ b/_config.yml
@@ -73,8 +73,8 @@ sidebar-avatar: /img/by.jpg      # use absolute URL, seeing it's used in both `/
 
 
 # Featured Tags
-featured-tags: false                     # whether or not using Feature-Tags
-featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
+featured-tags: true                     # whether or not using Feature-Tags
+featured-condition-size: 0.9              # A tag will be featured if the size of it is more than this condition value
 
 
 
